# Hybrid-ML-LLM-Decision-Supporting-Agent-for-Customer-Churn-Analysis

./: .env.example  .gitignore  Makefile  README.md  predict_metrics.py  pyproject.toml  requirements.txt
configs/: default.toml
outputs/predictions/: prediction.csv
scripts/: evaluate.py  predict.py  preprocess.py  run_pipeline.py
src/churn_retrieval/: cli.py  config.py  constants.py  logging.py  pipeline.py
src/churn_retrieval/evaluation/: service.py
src/churn_retrieval/modeling/: feature_builder.py  retrieval.py  service.py
src/churn_retrieval/preprocessing/: cleaning.py  datasets.py  features.py  service.py
src/churn_retrieval/utils/: env.py  io.py
tests/: test_config.py  test_preprocessing_helpers.py
